--- a/src/main/resources/static/settings/settings.css
+++ b/src/main/resources/static/settings/settings.css
@@ -8,7 +8,7 @@ html, body {
     padding: 0;
     color: #ddd;
     font-family: 'Consolas', 'Lucida Console', 'Courier New', monospace;
-    font-size: 3vmax;
+    font-size: 3vh;
     width: 100%;
     height: 100%;
     user-select: none;
@@ -16,12 +16,12 @@ html, body {
 }
 
 body {
-    padding: 2vmax;
+    padding: 2vh;
 }
 
 header {
     text-align: center;
-    margin-bottom: 2vmax;
+    margin-bottom: 2vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,27 +29,27 @@ header {
 }
 
 header > div {
-    margin: 1vmax 0;
+    margin: 1vh 0;
 }
 
 #headline {
     font-weight: bold;
-    font-size: 4vmax;
+    font-size: 4vh;
 }
 
 #subtitle {
-    font-size: 3vmax;
+    font-size: 3vh;
     opacity: 0.5;
 }
 
 #description-toggle {
-    font-size: 2vmax;
+    font-size: 2vh;
     opacity: 0.5;
     cursor: pointer;
     text-decoration: line-through;
     background-color: #222;
-    padding: 1vmax;
-    border-radius: 1vmax;
+    padding: 1vh;
+    border-radius: 1vh;
     width: fit-content;
 }
 
@@ -64,7 +64,7 @@ header > div {
 #settings {
     display: flex;
     flex-direction: column;
-    gap: 1vmax;
+    gap: 1vh;
     max-width: 100%;
 }
 
@@ -74,8 +74,8 @@ header > div {
 
 #settings .setting-category {
     background-color: #222;
-    padding: 1vmax;
-    border-radius: 1vmax;
+    padding: 1vh;
+    border-radius: 1vh;
     text-align: center;
     transition: opacity 0.1s;
     justify-content: center;
@@ -92,7 +92,7 @@ header > div {
 #settings .setting {
     cursor: pointer;
     opacity: 0.5;
-    margin: 1vmax;
+    margin: 1vh;
 }
 
 #settings .setting:hover {
@@ -106,7 +106,7 @@ header > div {
 
 #settings .setting-category .setting-category-header {
     cursor: pointer;
-    font-size: 4vmax;
+    font-size: 4vh;
     font-weight: bold;
     opacity: 0.5;
 }
@@ -117,7 +117,7 @@ header > div {
 
 #settings .setting-category .setting-description {
     display: none;
-    font-size: 1.25vmax;
+    font-size: 1.25vh;
     opacity: 0.65;
     text-align: justify;
     text-align-last: center;
